brio-core/kernel/build_output_proto_2.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   C:\Users\wrc02\Desktop\brio\Brio-Kernel\brio-core\components\supervisor\Cargo.toml
workspace: C:\Users\wrc02\Desktop\brio\Brio-Kernel\brio-core\Cargo.toml
    Updating crates.io index
     Locking 9 packages to latest compatible versions
      Adding protoc-bin-vendored v3.2.0
      Adding protoc-bin-vendored-linux-aarch_64 v3.2.0
      Adding protoc-bin-vendored-linux-ppcle_64 v3.2.0
      Adding protoc-bin-vendored-linux-s390_64 v3.2.0
      Adding protoc-bin-vendored-linux-x86_32 v3.2.0
      Adding protoc-bin-vendored-linux-x86_64 v3.2.0
      Adding protoc-bin-vendored-macos-aarch_64 v3.2.0
      Adding protoc-bin-vendored-macos-x86_64 v3.2.0
      Adding protoc-bin-vendored-win32 v3.2.0
 Downloading crates ...
  Downloaded protoc-bin-vendored v3.2.0
  Downloaded protoc-bin-vendored-macos-aarch_64 v3.2.0
  Downloaded protoc-bin-vendored-macos-x86_64 v3.2.0
  Downloaded protoc-bin-vendored-linux-aarch_64 v3.2.0
  Downloaded protoc-bin-vendored-linux-x86_64 v3.2.0
  Downloaded protoc-bin-vendored-win32 v3.2.0
  Downloaded protoc-bin-vendored-linux-ppcle_64 v3.2.0
  Downloaded protoc-bin-vendored-linux-x86_32 v3.2.0
  Downloaded protoc-bin-vendored-linux-s390_64 v3.2.0
   Compiling protoc-bin-vendored-macos-x86_64 v3.2.0
   Compiling protoc-bin-vendored-linux-x86_32 v3.2.0
   Compiling protoc-bin-vendored-linux-aarch_64 v3.2.0
   Compiling protoc-bin-vendored-linux-x86_64 v3.2.0
   Compiling protoc-bin-vendored-win32 v3.2.0
   Compiling protoc-bin-vendored-linux-s390_64 v3.2.0
   Compiling protoc-bin-vendored-linux-ppcle_64 v3.2.0
   Compiling protoc-bin-vendored-macos-aarch_64 v3.2.0
   Compiling protoc-bin-vendored v3.2.0
   Compiling brio-kernel v0.1.0 (C:\Users\wrc02\Desktop\brio\Brio-Kernel\brio-core\kernel)
error[E0133]: call to unsafe function `set_var` is unsafe and requires unsafe block
 --> kernel\build.rs:3:9
  |
3 |         std::env::set_var("PROTOC", protoc_bin_vendored::protoc_bin_path().expect("protoc binary not found in vendored crate"));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior

For more information about this error, try `rustc --explain E0133`.
error: could not compile `brio-kernel` (build script) due to 1 previous error
